force-app/main/default/objects/Account/fields/Last_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Close_Date__c</fullName>
    <label>Last Close Date</label>
    <type>Date</type>
</CustomField>