force-app/main/default/objects/Account/fields/Last_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscription_End_Date__c</fullName>
    <label>Last Subscription End Date</label>
    <type>Date</type>
</CustomField>