force-app/main/default/objects/Account/fields/permanent_email_start_date__c.field-meta.xml
<CustomField>
    <fullName>permanent_email_start_date__c</fullName>
    <formula>IF(
TRUE,
DATE(2024,01,29),
TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>permanent email start date</label>
    <type>Date</type>
</CustomField>