force-app/main/default/objects/Account/listViews/BILLING_COUNTRY.listView-meta.xml
<ListView>
    <fullName>BILLING_COUNTRY</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>equals</operation>
        <value>india</value>
    </filters>
    <label>BILLING COUNTRY</label>
</ListView>